--- a/product-service/package.json
+++ b/product-service/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config ./jest.config.ts"
   },
   "engines": {
     "node": ">=14.15.0"
@@ -17,10 +17,14 @@
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.25",
+    "aws-lambda-mock-context": "^3.2.1",
+    "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.52.1",
     "serverless-webpack": "^5.3.5",
+    "ts-jest": "^27.0.4",
     "ts-loader": "^8.0.15",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
