--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,13 +13,15 @@
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
     "pg": "^8.7.1",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.23.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.25",
+    "@types/uuid": "^8.3.1",
     "aws-lambda-mock-context": "^3.2.1",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
