--- a/import-service/package.json
+++ b/import-service/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@middy/core": "^1.5.2",
     "@middy/http-json-body-parser": "^1.5.2",
+    "aws-sdk": "^2.967.0",
+    "csv-parser": "^3.0.0",
     "pg": "^8.7.1",
     "source-map-support": "^0.5.19",
     "uuid": "^8.3.2"
