--- a/import-service/package.json
+++ b/import-service/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^14.14.25",
     "@types/uuid": "^8.3.1",
     "aws-lambda-mock-context": "^3.2.1",
+    "aws-sdk-mock": "^5.2.1",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.52.1",
