--- a/product-service/package.json
+++ b/product-service/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^14.14.25",
     "@types/uuid": "^8.3.1",
     "aws-lambda-mock-context": "^3.2.1",
+    "aws-sdk-mock": "^5.2.2",
     "jest": "^27.0.6",
     "json-schema-to-ts": "^1.5.0",
     "serverless": "^2.55.0",
