--- a/product-service/tsconfig.paths.json
+++ b/product-service/tsconfig.paths.json
@@ -4,7 +4,8 @@
     "paths": {
       "@functions/*": ["src/functions/*"],
       "@libs/*": ["src/libs/*"],
-      "@services/*": ["src/services/*"]
+      "@services/*": ["src/services/*"],
+      "@shared/*": ["../shared/*"]
     }
   }
 }
