--- a/bff-service/.env.eb
+++ b/bff-service/.env.eb
@@ -1,3 +1,3 @@
 NODE_ENV=production
-cart=http://unfalse-cart-api-develop.eu-west-1.elasticbeanstalk.com/api
+cart=http://localhost:4000/api/profile/cart
 product=https://xrmedhz5nf.execute-api.eu-west-1.amazonaws.com/dev/products
