--- a/bff-service/.gitignore
+++ b/bff-service/.gitignore
@@ -397,3 +397,7 @@ Temporary Items
 .env
 .env.eb
 dist
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
